fix: keep SSE alive while Playwright warms up off the request path
Stop first-chat 502s caused by the 30s async timeout and extra browser downloads, then fall through to YHDM when plugin search fails.

Co-authored-by: Cursor <cursoragent@cursor.com>